# django_study

./: pyproject.toml
config/: urls.py
config/settings/: base.py  local.py
reservations/: models.py
restaurants/: models.py
restaurants/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
