[tool.poetry]
name = "django-sprint"
version = "0.1.0"
description = ""
authors = ["kahyeonseo <kahyeonseo0330@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pillow = "^10.4.0"
setuptools = "^75.1.0"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
